syntax = "proto3";

package com.pythongong.community.infras.proto;

import "google/protobuf/any.proto";

// Option to generate separate Java files for each message/service
option java_multiple_files = true;

option java_package = "com.pythongong.community.infras.proto";

message StringVal {
    string val = 1;
}

message IntVal {
    int32 val = 1;
}

message LongVal {
    int64 val = 1;
}

message BoolVal {
    bool val = 1;
}

message DoubleVal {
    double val = 1;
}