syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pythongong.community.grpc";

package com.pythongong.community;

service UserService {
  rpc GetUserName (UserRequest) returns (UserResponse) {}
}

message UserRequest {
  int64 userId = 1;
}

message UserResponse {
  string userName = 1;
}